--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 
 
 /* Hide scrollbar but keep scroll functionality */
